--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -51,3 +51,7 @@ set -g pane-active-border-fg colour150
 
 # Don't automatically rename windows
 set -g automatic-rename off
+
+# Use base-index of 1
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
