--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,9 @@
 # Rebind action key
 set-option -g prefix C-a
 
+# copy and paster
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Double control-a to switch between current and last window.
 bind-key C-a last-window
 
